--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "wouter": "2.8.0-alpha.2"
+    "wouter": "2.8.0-alpha.2",
+    "react-bootstrap": "2.5.0"
   },
   "devDependencies": {
     "@types/node": "16.11.56",
