--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,20 +5,19 @@
     "start": "node_modules/.bin/ts-node -r tsconfig-paths/register src/index.ts"
   },
   "dependencies": {
+    "bcryptjs": "2.4.3",
     "express": "4.18.1",
     "dotenv": "16.0.1",
     "mysql2": "2.3.3",
     "class-transformer": "0.5.1",
-    "cors": "2.8.5",
     "ts-node": "10.9.1",
     "tsconfig-paths": "4.1.0",
-    "lodash": "4.17.21",
     "typescript": "~4.8.2",
     "@nestjs/common": "9.0.11",
     "@nestjs/core": "9.0.11",
     "@nestjs/platform-express": "9.0.11",
     "@nestjs/typeorm": "9.0.1",
-    "@nestjs/passport": "9.0.0",
+    "@nestjs/jwt": "9.0.0",
     "typeorm": "0.3.8",
     "@nestjs/graphql": "9.2.7",
     "@nestjs/apollo": "9.2.7",
@@ -31,7 +30,8 @@
   },
   "devDependencies": {
     "@types/cors": "2.8.12",
-    "@types/express": "^4.17.13"
+    "@types/express": "^4.17.13",
+    "@types/bcryptjs": "2.4.2"
   },
   "gitHead": "2305e183b7fa01b3837f0f20c401ecdec6858de6"
 }
