--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -26,7 +26,9 @@
     "apollo-server-express": "3.10.2",
     "rxjs": "7.5.6",
     "class-validator": "0.13.2",
-    "dataloader": "2.1.0"
+    "dataloader": "2.1.0",
+    "@nestjs/platform-ws": "9.0.11",
+    "@nestjs/websockets": "9.0.11"
   },
   "devDependencies": {
     "@types/cors": "2.8.12",
