--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "PORT=3001 SKIP_PREFLIGHT_CHECK=true react-scripts start",
-    "build": "rimraf dist && rimraf ./build && SKIP_PREFLIGHT_CHECK=true react-scripts build && mv build dist && cp dist/index.html dist/404.html"
+    "build": "rimraf dist && rimraf ./build && SKIP_PREFLIGHT_CHECK=true react-scripts build && mv build dist && cp dist/index.html dist/404.html && yarn types",
+    "types": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
     "react": "18.2.0",
@@ -23,10 +24,27 @@
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "react-scripts": "5.0.1",
-    "typescript": "4.8.2"
+    "typescript": "4.8.2",
+    "@graphql-codegen/cli": "2.11.8",
+    "@graphql-codegen/typescript-react-apollo": "3.3.3",
+    "@graphql-codegen/typescript": "2.7.3",
+    "@graphql-codegen/typescript-operations": "2.5.3",
+    "@graphql-codegen/introspection": "2.2.1"
   },
   "eslintConfig": {
     "extends": "react-app"
   },
-  "gitHead": "2305e183b7fa01b3837f0f20c401ecdec6858de6"
+  "gitHead": "2305e183b7fa01b3837f0f20c401ecdec6858de6",
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
