--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,7 +12,7 @@
     "wouter": "2.8.0-alpha.2",
     "react-bootstrap": "2.5.0",
     "@apollo/react-hooks": "4.0.0",
-    "apollo-client": "2.6.10",
+    "@apollo/client": "3.6.9",
     "apollo-boost": "0.4.9",
     "graphql": "16.6.0",
     "graphql-tag": "2.12.6",
