Implement shared types between api and web to help with gql integration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "baseUrl": ".",
     "paths": {
       "@imagine-cms/api": ["apps/api/src"],
-      "@imagine-cms/web": ["apps/web/src"]
+      "@imagine-cms/web": ["apps/web/src"],
+      "@imagine-cms/types": ["apps/types/src"]
     },
     "noEmit": true
   },
