--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,6 +1,11 @@
 {
   "name": "@imagine-cms/api",
   "version": "1.0.0",
+  "main": "dist/index.js",
+  "types": "dist/types",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "start": "node_modules/.bin/ts-node -r tsconfig-paths/register src/index.ts"
   },
@@ -28,7 +33,8 @@
     "class-validator": "0.13.2",
     "dataloader": "2.1.0",
     "@nestjs/platform-ws": "9.0.11",
-    "@nestjs/websockets": "9.0.11"
+    "@nestjs/websockets": "9.0.11",
+    "@imagine-cms/types": "*"
   },
   "devDependencies": {
     "@types/cors": "2.8.12",
