--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,6 +1,11 @@
 {
   "name": "@imagine-cms/web",
   "version": "1.0.0",
+  "main": "dist/index.js",
+  "types": "dist/types",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "start": "PORT=3001 SKIP_PREFLIGHT_CHECK=true react-scripts start",
     "build": "rimraf dist && rimraf ./build && SKIP_PREFLIGHT_CHECK=true react-scripts build && mv build dist && cp dist/index.html dist/404.html && yarn types",
@@ -16,20 +21,15 @@
     "apollo-boost": "0.4.9",
     "graphql": "16.6.0",
     "graphql-tag": "2.12.6",
-    "apollo-cache-inmemory": "1.6.6",
-    "apollo-link-ws": "1.0.20"
+    "apollo-link-ws": "1.0.20",
+    "@imagine-cms/types": "*"
   },
   "devDependencies": {
     "@types/node": "16.11.56",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "react-scripts": "5.0.1",
-    "typescript": "4.8.2",
-    "@graphql-codegen/cli": "2.11.8",
-    "@graphql-codegen/typescript-react-apollo": "3.3.3",
-    "@graphql-codegen/typescript": "2.7.3",
-    "@graphql-codegen/typescript-operations": "2.5.3",
-    "@graphql-codegen/introspection": "2.2.1"
+    "typescript": "4.8.2"
   },
   "eslintConfig": {
     "extends": "react-app"
