--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -10,6 +10,7 @@
     "start": "node_modules/.bin/ts-node -r tsconfig-paths/register src/index.ts"
   },
   "dependencies": {
+    "lodash": "4.17.21",
     "bcryptjs": "2.4.3",
     "express": "4.18.1",
     "dotenv": "16.0.1",
@@ -34,12 +35,14 @@
     "dataloader": "2.1.0",
     "@nestjs/platform-ws": "9.0.11",
     "@nestjs/websockets": "9.0.11",
-    "@imagine-cms/types": "*"
+    "@imagine-cms/types": "*",
+    "graphql-type-json": "0.3.2"
   },
   "devDependencies": {
     "@types/cors": "2.8.12",
     "@types/express": "^4.17.13",
-    "@types/bcryptjs": "2.4.2"
+    "@types/bcryptjs": "2.4.2",
+    "@types/lodash": "4.14.184"
   },
   "gitHead": "2305e183b7fa01b3837f0f20c401ecdec6858de6"
 }
