--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,7 +22,8 @@
     "graphql": "16.6.0",
     "graphql-tag": "2.12.6",
     "apollo-link-ws": "1.0.20",
-    "@imagine-cms/types": "*"
+    "@imagine-cms/types": "*",
+    "dayjs": "1.11.5"
   },
   "devDependencies": {
     "@types/node": "16.11.56",
