Move majority of graphql queries/mutations to private hooks

--- a/apps/boon-web/package.json
+++ b/apps/boon-web/package.json
@@ -23,7 +23,8 @@
     "graphql-tag": "2.12.6",
     "apollo-link-ws": "1.0.20",
     "@imagine-cms/types": "*",
-    "dayjs": "1.11.5"
+    "dayjs": "1.11.5",
+    "react-loading-overlay": "1.0.1"
   },
   "devDependencies": {
     "@types/node": "16.11.56",
