--- a/apps/boon-web/tsconfig.json
+++ b/apps/boon-web/tsconfig.json
@@ -1,7 +1,15 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "lib": ["dom"],
-    "jsx": "react"
+    "lib": [
+      "dom"
+    ],
+    "jsx": "react",
+    "allowJs": true,
+    "allowSyntheticDefaultImports": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true
   }
 }
