--- a/libs/web/package.json
+++ b/libs/web/package.json
@@ -9,5 +9,24 @@
   "scripts": {
     "start": "node_modules/.bin/ts-node -r tsconfig-paths/register src/index.ts"
   },
+  "dependencies": {
+    "@apollo/react-hooks": "4.0.0",
+    "@apollo/client": "3.6.9",
+    "apollo-boost": "0.4.9",
+    "graphql": "16.6.0",
+    "apollo-link-ws": "1.0.20"
+  },
+  "devDependencies": {
+    "@types/node": "15.12.4",
+    "@types/react": "17.0.11",
+    "react": "17.0.1",
+    "wouter": "2.7.4",
+    "graphql-tag": "2.12.6"
+  },
+  "peerDependencies": {
+    "react": "17.0.1",
+    "wouter": "2.7.4",
+    "graphql-tag": "2.12.6"
+  },
   "gitHead": "2305e183b7fa01b3837f0f20c401ecdec6858de6"
 }
