--- a/package.json
+++ b/package.json
@@ -27,5 +27,12 @@
   "name": "imagine",
   "engines": {
     "node": ">=16.0.0"
+  },
+  "resolutions": {
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-scripts": "3.4.3",
+    "@types/react": "17.0.1",
+    "@types/react-dom": "17.0.1"
   }
 }
