--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "baseUrl": ".",
     "paths": {
       "@imagine-cms/api": ["apps/api/src"],
+      "@imagine-cms/admin-web": ["apps/admin-web/src"],
       "@imagine-cms/boon-web": ["apps/boon-web/src"],
       "@imagine-cms/types": ["libs/types/src"],
       "@imagine-cms/web": ["libs/web/src"]
