--- a/libs/web/package.json
+++ b/libs/web/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@types/node": "15.12.4",
     "@types/react": "17.0.11",
+    "@types/react-dom": "17.0.8",
     "react": "17.0.1",
     "wouter": "2.7.4",
     "graphql-tag": "2.12.6"
@@ -27,6 +28,9 @@
     "react": "17.0.1",
     "wouter": "2.7.4",
     "graphql-tag": "2.12.6"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
   },
   "gitHead": "2305e183b7fa01b3837f0f20c401ecdec6858de6"
 }
