--- a/package.json
+++ b/package.json
@@ -11,18 +11,21 @@
     "purge": "lerna exec -- rm -rf node_modules && lerna exec -- rm -rf dist && rm -rf yarn.lock && rm -rf node_modules && rm -rf yarn.lock"
   },
   "devDependencies": {
-    "@types/node": "16.11.56",
-    "@typescript-eslint/eslint-plugin": "5.35.1",
+    "@types/node": "14.14.33",
+    "@typescript-eslint/eslint-plugin": "4.17.0",
     "babel-eslint": "10.1.0",
-    "eslint-plugin-flowtype": "8.0.3",
-    "eslint-plugin-import": "2.26.0",
+    "eslint-config-react-app": "6.0.0",
+    "eslint-plugin-flowtype": "5.3.1",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-prettier": "4.2.1",
-    "eslint-plugin-react": "7.31.1",
-    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-prettier": "3.3.1",
+    "eslint-plugin-react": "7.22.0",
+    "eslint-plugin-react-hooks": "4.2.0",
     "gts": "3.1.0",
-    "lerna": "5.4.3",
-    "typescript": "4.8.2"
+    "lerna": "4.0.0",
+    "tsconfig-paths-webpack-plugin": "3.3.0",
+    "typescript": "4.2.3"
   },
   "name": "imagine",
   "engines": {
