--- a/apps/admin-web/package.json
+++ b/apps/admin-web/package.json
@@ -20,14 +20,12 @@
     "@imagine-cms/web": "*",
     "dayjs": "1.11.5",
     "react-loading-overlay": "1.0.1",
-    "react-toastify": "7.0.4",
-    "react-table": "7.8.0"
+    "react-toastify": "7.0.4"
   },
   "devDependencies": {
     "@types/node": "15.12.4",
     "@types/react": "17.0.11",
     "@types/react-dom": "17.0.8",
-    "@types/react-table": "7.7.12",
     "react-scripts": "3.4.3",
     "typescript": "4.8.2",
     "react-app-rewired": "2.1.8",
