--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,11 +5,13 @@
     "@typescript-eslint/no-explicit-any": 0,
     "@typescript-eslint/ban-ts-comment": 0,
     "node/no-unpublished-import": 0,
+    "no-unused-vars": 0,
     "@typescript-eslint/no-unused-vars": 0,
     "@typescript-eslint/no-empty-interface": 0,
     "node/no-unsupported-features/es-syntax": 0,
     "node/no-unsupported-features/node-builtins": 0,
-    "node/no-missing-require": 0
+    "node/no-missing-require": 0,
+    "react-hooks/exhaustive-deps": 0
   },
   "plugins": [
     "react",
