--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,8 @@
     "node/no-unsupported-features/es-syntax": 0,
     "node/no-unsupported-features/node-builtins": 0,
     "node/no-missing-require": 0,
-    "react-hooks/exhaustive-deps": 0
+    "react-hooks/exhaustive-deps": 0,
+    "jsx-a11y/anchor-is-valid": 0
   },
   "plugins": [
     "react",
