--- a/apps/cosmic-web/package.json
+++ b/apps/cosmic-web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@imagine-cms/boon-web",
+  "name": "@imagine-cms/cosmic-web",
   "version": "1.0.0",
   "main": "dist/index.js",
   "types": "dist/types",
