--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
       "@imagine-cms/admin-web": ["apps/admin-web/src"],
       "@imagine-cms/boon-web": ["apps/boon-web/src"],
       "@imagine-cms/cosmic-web": ["apps/cosmic-web/src"],
+      "@imagine-cms/modern-flat-web": ["apps/modern-flat-web/src"],
       "@imagine-cms/types": ["libs/types/src"],
       "@imagine-cms/web": ["libs/web/src"]
     },
