--- a/apps/modern-flat-web/package.json
+++ b/apps/modern-flat-web/package.json
@@ -19,15 +19,16 @@
     "react-bootstrap": "1.6.6",
     "@imagine-cms/types": "*",
     "@imagine-cms/web": "*",
-    "dayjs": "1.11.5",
+    "react-dates": "21.8.0",
+    "moment": "2.29.4",
     "react-loading-overlay": "1.0.1",
-    "react-toastify": "7.0.4",
-    "react-multi-carousel": "2.8.2"
+    "react-toastify": "7.0.4"
   },
   "devDependencies": {
     "@types/node": "15.12.4",
     "@types/react": "17.0.11",
     "@types/react-dom": "17.0.8",
+    "@types/react-dates": "21.8.3",
     "react-scripts": "3.4.3",
     "typescript": "4.8.2",
     "react-app-rewired": "2.1.8",
