--- a/libs/types/package.json
+++ b/libs/types/package.json
@@ -7,7 +7,22 @@
     "dist"
   ],
   "scripts": {
-    "start": "node_modules/.bin/ts-node -r tsconfig-paths/register src/index.ts"
+    "build": "yarn run clean && yarn run compile",
+    "clean": "rimraf -rf ./dist && rimraf -rf ./build",
+    "compile": "rollup -c && yarn run compile:types",
+    "compile:types": "tsc -d -p tsconfig.build.json --emitDeclarationOnly --declarationDir dist/types"
+  },
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "19.0.0",
+    "@rollup/plugin-node-resolve": "13.0.0",
+    "@rollup/plugin-typescript": "8.2.1",
+    "@types/node": "15.12.4",
+    "rimraf": "3.0.2",
+    "rollup-plugin-peer-deps-external": "2.2.4",
+    "rollup-plugin-terser": "7.0.2",
+    "ts-node": "10.0.0",
+    "tsconfig-paths": "3.9.0",
+    "typescript": "~4.2.3"
   },
   "gitHead": "2305e183b7fa01b3837f0f20c401ecdec6858de6"
 }
