--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -37,13 +37,15 @@
     "class-validator": "0.13.2",
     "dataloader": "2.1.0",
     "@imagine-cms/types": "*",
-    "graphql-type-json": "0.3.2"
+    "graphql-type-json": "0.3.2",
+    "randomstring": "1.2.2"
   },
   "devDependencies": {
     "@types/cors": "2.8.12",
     "@types/express": "^4.17.13",
     "@types/bcryptjs": "2.4.2",
     "@types/lodash": "4.14.184",
+    "@types/randomstring": "1.1.8",
     "nodemon": "2.0.19"
   },
   "gitHead": "2305e183b7fa01b3837f0f20c401ecdec6858de6"
