--- a/apps/admin-web/package.json
+++ b/apps/admin-web/package.json
@@ -20,14 +20,19 @@
     "dayjs": "1.11.9",
     "react-loading-overlay": "1.0.1",
     "react-toastify": "9.1.3",
-    "react-dialog": "1.0.2"
+    "react-dialog": "1.0.2",
+    "react-bootstrap": "2.8.0"
   },
   "devDependencies": {
     "@types/node": "20.5.8",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "typescript": "5.2.2",
-    "tsconfig-paths-webpack-plugin": "4.1.0"
+    "tsconfig-paths-webpack-plugin": "4.1.0",
+    "vite": "4.4.9",
+    "@vitejs/plugin-react": "4.0.4",
+    "vite-tsconfig-paths": "4.2.0",
+    "@originjs/vite-plugin-commonjs": "1.0.3"
   },
   "eslintConfig": {
     "extends": "react-app"
