--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
     "build": "lerna run build",
     "deploy": "yarn run build && lerna publish",
     "purge": "pnpm --recursive -- rm -rf node_modules && lerna exec -- rm -rf dist && rm -rf pnpm-lock.yaml && rm -rf node_modules && rm -rf pnpm-lock.yaml",
+    "dev:start": "pm2 start process.json && pnpm run dev:logs",
+    "dev:logs": "pm2 logs",
+    "dev:restart": "pnpm run dev:stop && pnpm run dev:start",
+    "dev:stop": "pm2 stop all && pm2 delete all",
     "app:api": "pnpm run --filter @imagine-cms/api --",
     "app:web": "pnpm run --filter @imagine-cms/imagine-web --",
     "app:admin": "pnpm run --filter @imagine-cms/admin-web --"
@@ -24,7 +28,8 @@
     "gts": "5.0.1",
     "lerna": "7.2.0",
     "tsconfig-paths-webpack-plugin": "4.1.0",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "pm2": "5.3.0"
   },
   "name": "imagine",
   "engines": {
