--- a/apps/imagine-api/package.json
+++ b/apps/imagine-api/package.json
@@ -7,8 +7,8 @@
     "dist"
   ],
   "scripts": {
-    "start": "node_modules/.bin/ts-node -r tsconfig-paths/register src/index.ts",
-    "start:dev": "nodemon --exec yarn start"
+    "start": "node_modules/.bin/ts-node --swc -r tsconfig-paths/register src/index.ts",
+    "dev": "nodemon --exec pnpm run start"
   },
   "dependencies": {
     "lodash": "4.17.21",
@@ -47,7 +47,8 @@
     "@types/bcryptjs": "2.4.3",
     "@types/lodash": "4.14.197",
     "@types/randomstring": "1.1.8",
-    "nodemon": "3.0.1"
+    "nodemon": "3.0.1",
+    "@swc/core": "1.3.60"
   },
   "gitHead": "2305e183b7fa01b3837f0f20c401ecdec6858de6"
 }
