--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "fix": "gts fix",
     "build": "lerna run build",
     "deploy": "yarn run build && lerna publish",
-    "purge": "pnpm run --recursive -- rm -rf node_modules && lerna exec -- rm -rf dist && rm -rf pnpm-lock.yaml && rm -rf node_modules && rm -rf pnpm-lock.yaml",
+    "purge": "lerna exec -- rm -rf node_modules && lerna exec -- rm -rf dist && rm -rf pnpm-lock.yaml && rm -rf node_modules && rm -rf pnpm-lock.yaml",
     "dev:start": "pm2 start process.json && pnpm run dev:logs",
     "dev:logs": "pm2 logs",
     "dev:restart": "pnpm run dev:stop && pnpm run dev:start",
