--- a/apps/imagine-web/package.json
+++ b/apps/imagine-web/package.json
@@ -18,6 +18,11 @@
     "dayjs": "1.11.9",
     "react-toastify": "9.1.3",
     "styled-components": "6.0.7",
+    "@apollo/react-hooks": "4.0.0",
+    "@apollo/client": "3.8.2",
+    "apollo-boost": "0.4.9",
+    "graphql": "16.8.0",
+    "apollo-link-ws": "1.0.20",
     "@imagine-cms/types": "*",
     "@imagine-cms/web": "*"
   },
