--- a/libs/client/package.json
+++ b/libs/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@imagine-cms/web",
+  "name": "@imagine-cms/client",
   "version": "1.0.0",
   "main": "src/index.ts",
   "files": [
@@ -16,7 +16,6 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "react": "18.2.0",
-    "wouter": "2.11.0",
     "graphql-tag": "2.12.6",
     "sass": "1.66.1",
     "acorn-jsx": "5.3.2",
@@ -35,8 +34,7 @@
     "apollo-boost": "0.4.9",
     "graphql": "16.8.0",
     "apollo-link-ws": "1.0.20",
-    "@imagine-cms/types": "*",
-    "react-toastify": "9.1.3"
+    "@imagine-cms/types": "*"
   },
   "peerDependencies": {
     "react": "17.0.1",
