--- a/apps/imagine-api/package.json
+++ b/apps/imagine-api/package.json
@@ -39,7 +39,8 @@
     "dataloader": "2.2.2",
     "@imagine-cms/types": "*",
     "graphql-type-json": "0.3.2",
-    "randomstring": "1.3.0"
+    "randomstring": "1.3.0",
+    "discord.js": "14.13.0"
   },
   "devDependencies": {
     "@types/cors": "2.8.13",
