--- a/apps/imagine-api/.env.example
+++ b/apps/imagine-api/.env.example
@@ -14,6 +14,9 @@ JWT_EXPIRATION_IN_MS=2400000000
 # GraphQL
 GRAPHQL_PLAYGROUND=false
 
+# Discord 
+DISCORD_TOKEN=
+
 # Default Values
 DEFAULT_CREDITS=100
 DEFAULT_ACTIVITY_POINTS=100
