--- a/apps/imagine-api/package.json
+++ b/apps/imagine-api/package.json
@@ -40,7 +40,8 @@
     "@imagine-cms/types": "*",
     "graphql-type-json": "0.3.2",
     "randomstring": "1.3.0",
-    "discord.js": "14.13.0"
+    "discord.js": "14.13.0",
+    "axios": "1.5.0"
   },
   "devDependencies": {
     "@types/cors": "2.8.13",
