--- a/libs/web/package.json
+++ b/libs/web/package.json
@@ -36,7 +36,8 @@
     "graphql": "16.8.0",
     "apollo-link-ws": "1.0.20",
     "@imagine-cms/types": "*",
-    "react-toastify": "9.1.3"
+    "react-toastify": "9.1.3",
+    "@imagine-cms/client": "*"
   },
   "peerDependencies": {
     "react": "17.0.1",
@@ -48,7 +49,8 @@
     "@apollo/client": "3.8.2",
     "apollo-boost": "0.4.9",
     "graphql": "16.8.0",
-    "apollo-link-ws": "1.0.20"
+    "apollo-link-ws": "1.0.20",
+    "@imagine-cms/client": "*"
   },
   "eslintConfig": {
     "extends": "react-app"
