cleanup: Delete legacy admin panel.  Going to remake it because yolo (and api changed a lot)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,8 @@
       "@imagine-cms/api": [
         "apps/imagine-api/src"
       ],
-      "@imagine-cms/admin-web": [
-        "apps/admin-web/src"
+      "@imagine-cms/cerberus-web": [
+        "apps/cerberus-web/src"
       ],
       "@imagine-cms/imagine-web": [
         "apps/imagine-web/src"
