feature: Forgot Password Requests

--- a/apps/imagine-api/.env.example
+++ b/apps/imagine-api/.env.example
@@ -25,3 +25,12 @@ DEFAULT_MOTTO="Welcome to Imagine!"
 DEFAULT_LOOK=-
 DEFAULT_HOME_ROOM=1
 DEFAULT_RANK=1
+
+# Sites
+SITE_WEB_URL="https://localhost:5134"
+
+# Forgot Password
+FORGOT_PASSWORD_EXPIRATION_LENGTH_HOURS=24
+
+# Emails
+EMAILS_INTERNAL_EMAIL_ADDRESS=
