--- a/apps/imagine-api/package.json
+++ b/apps/imagine-api/package.json
@@ -41,7 +41,10 @@
     "graphql-type-json": "0.3.2",
     "randomstring": "1.3.0",
     "discord.js": "14.13.0",
-    "axios": "1.5.0"
+    "axios": "1.5.0",
+    "dayjs": "1.11.9",
+    "uuid": "9.0.1",
+    "sendmail": "1.6.1"
   },
   "devDependencies": {
     "@types/cors": "2.8.13",
@@ -49,6 +52,8 @@
     "@types/bcryptjs": "2.4.3",
     "@types/lodash": "4.14.197",
     "@types/randomstring": "1.1.8",
+    "@types/uuid": "9.0.4",
+    "@types/sendmail": "1.4.4",
     "nodemon": "3.0.1",
     "@swc/core": "1.3.60"
   },
