--- a/apps/cerberus-web/package.json
+++ b/apps/cerberus-web/package.json
@@ -24,6 +24,7 @@
     "apollo-boost": "0.4.9",
     "graphql": "16.8.0",
     "apollo-link-ws": "1.0.20",
+    "draft-js": "0.11.7",
     "query-string": "8.1.0",
     "@imagine-cms/types": "*",
     "@imagine-cms/web": "*",
@@ -33,6 +34,7 @@
     "@types/node": "20.5.8",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@types/draft-js": "0.11.12",
     "typescript": "5.0.4",
     "tsconfig-paths-webpack-plugin": "4.1.0",
     "vite": "4.4.9",
