--- a/apps/imagine-web/package.json
+++ b/apps/imagine-web/package.json
@@ -19,6 +19,7 @@
     "react-toastify": "9.1.3",
     "styled-components": "6.0.7",
     "@apollo/react-hooks": "4.0.0",
+    "react-data-table-component": "7.5.4",
     "@apollo/client": "3.8.2",
     "apollo-boost": "0.4.9",
     "graphql": "16.8.0",
