--- a/libs/types/package.json
+++ b/libs/types/package.json
@@ -6,9 +6,9 @@
     "dist"
   ],
   "scripts": {
-    "build": "yarn run clean && yarn run compile",
-    "clean": "rimraf -rf ./dist && rimraf -rf ./build",
-    "compile": "rollup -c && yarn run compile:types",
+    "build": "pnpm run clean && pnpm run compile",
+    "clean": "rm -rf ./dist && rm -rf ./build",
+    "compile": "rollup -c && pnpm run compile:types",
     "compile:types": "tsc -d -p tsconfig.build.json --emitDeclarationOnly --declarationDir dist/types"
   },
   "devDependencies": {
@@ -16,7 +16,6 @@
     "@rollup/plugin-node-resolve": "15.2.1",
     "@rollup/plugin-typescript": "11.1.3",
     "@types/node": "20.5.8",
-    "rimraf": "5.0.1",
     "rollup-plugin-peer-deps-external": "2.2.4",
     "@rollup/plugin-terser": "0.4.3",
     "ts-node": "10.9.1",
