--- a/libs/client/package.json
+++ b/libs/client/package.json
@@ -24,6 +24,7 @@
     "@rollup/plugin-json": "6.0.0",
     "@rollup/plugin-node-resolve": "15.2.1",
     "@rollup/plugin-typescript": "11.1.3",
+    "tslib": "2.6.2",
     "rollup": "3.28.1",
     "rollup-plugin-copy": "3.5.0",
     "rollup-plugin-peer-deps-external": "2.2.4",
