--- a/libs/types/package.json
+++ b/libs/types/package.json
@@ -16,6 +16,7 @@
     "@rollup/plugin-node-resolve": "15.2.1",
     "@rollup/plugin-typescript": "11.1.3",
     "@types/node": "20.6.2",
+    "rollup": "3.29.2",
     "rollup-plugin-peer-deps-external": "2.2.4",
     "@rollup/plugin-terser": "0.4.3",
     "ts-node": "10.9.1",
