--- a/apps/imagine-web/package.json
+++ b/apps/imagine-web/package.json
@@ -17,6 +17,7 @@
     "graphql-tag": "2.12.6",
     "dayjs": "1.11.9",
     "react-toastify": "9.1.3",
+    "react-select": "5.7.7",
     "styled-components": "6.0.8",
     "@apollo/react-hooks": "4.0.0",
     "react-data-table-component": "7.5.4",
