--- a/libs/game-ui/package.json
+++ b/libs/game-ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@imagine-cms/websocket",
+  "name": "@imagine-cms/game-ui",
   "version": "1.0.0",
   "main": "src/index.ts",
   "files": [
@@ -11,14 +11,10 @@
     "compile": "rollup -c && pnpm run compile:types",
     "compile:types": "tsc -d -p tsconfig.build.json --emitDeclarationOnly --declarationDir dist/types"
   },
-  "dependencies": {
-    "ws": "8.16.0"
-  },
   "devDependencies": {
     "@types/node": "20.6.2",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
-    "@types/ws": "8.5.10",
     "react": "18.2.0",
     "wouter": "2.11.0",
     "graphql-tag": "2.12.6",
@@ -42,9 +38,9 @@
     "apollo-link-ws": "1.0.20",
     "@imagine-cms/types": "*",
     "react-toastify": "9.1.3",
-    "react-use-websocket": "4.5.0",
     "@imagine-cms/web": "*",
-    "@imagine-cms/client": "*"
+    "@imagine-cms/client": "*",
+    "@imagine-cms/websocket": "*"
   },
   "peerDependencies": {
     "react": "17.0.1",
@@ -58,7 +54,8 @@
     "graphql": "16.8.0",
     "apollo-link-ws": "1.0.20",
     "@imagine-cms/web": "*",
-    "@imagine-cms/client": "*"
+    "@imagine-cms/client": "*",
+    "@imagine-cms/websocket": "*"
   },
   "eslintConfig": {
     "extends": "react-app"
