--- a/libs/game-ui/package.json
+++ b/libs/game-ui/package.json
@@ -21,6 +21,7 @@
     "sass": "1.67.0",
     "tslib": "2.6.2",
     "acorn-jsx": "5.3.2",
+    "styled-components": "6.0.8",
     "@rollup/plugin-commonjs": "25.0.4",
     "@rollup/plugin-image": "3.0.2",
     "@rollup/plugin-json": "6.0.0",
@@ -45,6 +46,7 @@
   "peerDependencies": {
     "react": "17.0.1",
     "wouter": "2.7.4",
+    "styled-components": "6.0.8",
     "graphql-tag": "2.12.6",
     "@imagine-cms/types": "*",
     "react-toastify": "9.0.0",
