--- a/libs/web/package.json
+++ b/libs/web/package.json
@@ -15,6 +15,7 @@
     "@types/node": "20.6.2",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "styled-components": "6.0.8",
     "react": "18.2.0",
     "wouter": "2.11.0",
     "graphql-tag": "2.12.6",
@@ -43,6 +44,7 @@
   "peerDependencies": {
     "react": "17.0.1",
     "wouter": "2.7.4",
+    "styled-components": "6.0.8",
     "graphql-tag": "2.12.6",
     "@imagine-cms/types": "*",
     "react-toastify": "9.0.0",
