--- a/libs/shared-ui/package.json
+++ b/libs/shared-ui/package.json
@@ -31,11 +31,14 @@
     "rollup-plugin-peer-deps-external": "2.2.4",
     "rollup-plugin-scss": "4.0.0",
     "@rollup/plugin-terser": "0.4.3",
-    "@imagine-cms/types": "*"
+    "@imagine-cms/types": "*",
+    "@imagine-cms/web": "*"
   },
   "peerDependencies": {
     "react": "17.0.1",
-    "wouter": "2.11.0"
+    "wouter": "2.11.0",
+    "@imagine-cms/types": "*",
+    "@imagine-cms/web": "*"
   },
   "eslintConfig": {
     "extends": "react-app"
