--- a/libs/game-ui/package.json
+++ b/libs/game-ui/package.json
@@ -17,7 +17,6 @@
     "@types/react-dom": "18.2.7",
     "react": "18.2.0",
     "wouter": "2.11.0",
-    "graphql-tag": "2.12.6",
     "sass": "1.67.0",
     "tslib": "2.6.2",
     "acorn-jsx": "5.3.2",
@@ -32,34 +31,20 @@
     "rollup-plugin-peer-deps-external": "2.2.4",
     "rollup-plugin-scss": "4.0.0",
     "@rollup/plugin-terser": "0.4.3",
-    "@apollo/react-hooks": "4.0.0",
-    "@apollo/client": "3.8.3",
-    "apollo-boost": "0.4.9",
-    "graphql": "16.8.0",
-    "apollo-link-ws": "1.0.20",
-    "@imagine-cms/types": "*",
-    "react-toastify": "9.1.3",
-    "@imagine-cms/web": "*",
     "@imagine-cms/client": "*",
-    "@imagine-cms/websocket": "*",
-    "@imagine-cms/shared-ui": "*"
+    "@imagine-cms/shared-ui": "*",
+    "@imagine-cms/types": "*",
+    "@imagine-cms/web": "*",
+    "@imagine-cms/websocket": "*"
   },
   "peerDependencies": {
     "react": "17.0.1",
-    "wouter": "2.7.4",
-    "styled-components": "6.0.8",
-    "graphql-tag": "2.12.6",
-    "@imagine-cms/types": "*",
-    "react-toastify": "9.0.0",
-    "@apollo/react-hooks": "4.0.0",
-    "@apollo/client": "3.8.2",
-    "apollo-boost": "0.4.9",
-    "graphql": "16.8.0",
-    "apollo-link-ws": "1.0.20",
-    "@imagine-cms/web": "*",
+    "wouter": "2.11.0",
     "@imagine-cms/client": "*",
-    "@imagine-cms/websocket": "*",
-    "@imagine-cms/shared-ui": "*"
+    "@imagine-cms/shared-ui": "*",
+    "@imagine-cms/types": "*",
+    "@imagine-cms/web": "*",
+    "@imagine-cms/websocket": "*"
   },
   "eslintConfig": {
     "extends": "react-app"
