--- a/libs/game-ui/package.json
+++ b/libs/game-ui/package.json
@@ -20,6 +20,7 @@
     "sass": "1.67.0",
     "tslib": "2.6.2",
     "acorn-jsx": "5.3.2",
+    "dayjs": "1.11.10",
     "styled-components": "6.0.8",
     "@rollup/plugin-commonjs": "25.0.4",
     "@rollup/plugin-image": "3.0.2",
