feat: ability to interface imagine -> nitro

--- a/apps/imagine-web/.env.example
+++ b/apps/imagine-web/.env.example
@@ -1,5 +1,6 @@
 VITE_GRAPHQL_URL=ws://localhost:3001/graphql
 VITE_ADMIN_URL=https://cerberus.dev:5173/
+VITE_NITRO_CLIENT_URL=
 
 # Discord
 VITE_DISCORD_REDIRECT_URL=
