--- a/apps/nitro-react/package.json
+++ b/apps/nitro-react/package.json
@@ -20,7 +20,10 @@
     "typescript": "^4.3.5",
     "use-between": "^1.3.4",
     "@nitrots/nitro-renderer": "1.6.6",
-    "react-transition-group": "4.4.5"
+    "react-transition-group": "4.4.5",
+    "@imagine-cms/client": "*",
+    "@imagine-cms/web": "*",
+    "@imagine-cms/websocket": "*"
   },
   "devDependencies": {
     "@types/node": "^18.6.1",
