--- a/apps/nitro-react/package.json
+++ b/apps/nitro-react/package.json
@@ -22,6 +22,7 @@
     "@nitrots/nitro-renderer": "1.6.6",
     "react-transition-group": "4.4.5",
     "@imagine-cms/client": "*",
+    "@imagine-cms/shared-ui": "*",
     "@imagine-cms/web": "*",
     "@imagine-cms/websocket": "*"
   },
