feat: add context for users online

--- a/apps/imagine-web/package.json
+++ b/apps/imagine-web/package.json
@@ -31,7 +31,8 @@
     "@imagine-cms/web": "*",
     "@imagine-cms/client": "*",
     "@imagine-cms/game-ui": "*",
-    "@imagine-cms/shared-ui": "*"
+    "@imagine-cms/shared-ui": "*",
+    "@imagine-cms/websocket": "*"
   },
   "devDependencies": {
     "@types/node": "20.6.2",
