--- a/apps/imagine-web/package.json
+++ b/apps/imagine-web/package.json
@@ -38,6 +38,7 @@
     "@types/node": "20.6.2",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@types/draft-js": "0.11.17",
     "typescript": "5.2.2",
     "tsconfig-paths-webpack-plugin": "4.1.0",
     "vite": "4.4.9",
