feat: optimize db connection

--- a/apps/imagine-api/.env.example
+++ b/apps/imagine-api/.env.example
@@ -7,6 +7,10 @@ DATABASE_USER=
 DATABASE_PASS=
 DATABASE_NAME=
 
+# Caching
+REDIS_HOST=
+REDIS_PORT=
+
 # Authentication
 JWT_SECRET=
 JWT_EXPIRATION_IN_MS=2400000000
