--- a/apps/imagine-api/package.json
+++ b/apps/imagine-api/package.json
@@ -15,7 +15,8 @@
     "bcryptjs": "2.4.3",
     "express": "4.18.2",
     "dotenv": "16.3.1",
-    "mysql2": "3.6.1",
+    "mysql2": "3.7.0",
+    "redis": "4.6.12",
     "class-transformer": "0.5.1",
     "ts-node": "10.9.1",
     "tsconfig-paths": "4.2.0",
