--- a/apps/imagine-next/package.json
+++ b/apps/imagine-next/package.json
@@ -18,6 +18,7 @@
     "react-toastify": "9.1.3",
     "@imagine-cms/web": "*",
     "@imagine-cms/client": "*",
+    "@imagine-cms/types": "*",
     "@imagine-cms/websocket": "*"
   },
   "devDependencies": {
