--- a/apps/imagine-next/package.json
+++ b/apps/imagine-next/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev -p 5176",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 5176",
     "lint": "next lint"
   },
   "dependencies": {
@@ -14,7 +14,8 @@
     "react": "^18",
     "react-dom": "^18",
     "next": "14.0.4",
-    "styled-components": "6.1.6",
+    "@emotion/react": "11.11.3",
+    "@emotion/styled": "11.11.0",
     "react-toastify": "9.1.3",
     "@imagine-cms/web": "*",
     "@imagine-cms/client": "*",
