--- a/apps/imagine-next/package.json
+++ b/apps/imagine-next/package.json
@@ -14,12 +14,14 @@
     "react": "^18",
     "react-dom": "^18",
     "next": "14.0.4",
+    "query-string": "8.1.0",
     "framer-motion": "10.17.9",
     "@emotion/react": "11.11.3",
     "@emotion/styled": "11.11.0",
     "react-data-table-component": "7.5.4",
     "react-toastify": "9.1.3",
     "@imagine-cms/web": "*",
+    "@imagine-cms/game-ui": "*",
     "@imagine-cms/client": "*",
     "@imagine-cms/types": "*",
     "@imagine-cms/websocket": "*"
