--- a/libs/game-ui/package.json
+++ b/libs/game-ui/package.json
@@ -21,7 +21,8 @@
     "tslib": "2.6.2",
     "acorn-jsx": "5.3.2",
     "dayjs": "1.11.10",
-    "styled-components": "6.0.8",
+    "@emotion/react": "11.11.3",
+    "@emotion/styled": "11.11.0",
     "@rollup/plugin-commonjs": "25.0.4",
     "@rollup/plugin-image": "3.0.2",
     "@rollup/plugin-json": "6.0.0",
