--- a/libs/shared-ui/package.json
+++ b/libs/shared-ui/package.json
@@ -20,7 +20,8 @@
     "sass": "1.67.0",
     "tslib": "2.6.2",
     "acorn-jsx": "5.3.2",
-    "styled-components": "6.0.8",
+    "@emotion/react": "11.11.3",
+    "@emotion/styled": "11.11.0",
     "@rollup/plugin-commonjs": "25.0.4",
     "@rollup/plugin-image": "3.0.2",
     "@rollup/plugin-json": "6.0.0",
