--- a/apps/imagine-next/package.json
+++ b/apps/imagine-next/package.json
@@ -10,7 +10,15 @@
   },
   "dependencies": {
     "dayjs": "1.11.10",
+    "draft-js": "0.11.7",
     "dotenv": "16.3.1",
+    "react-select": "5.8.0",
+    "@apollo/react-hooks": "4.0.0",
+    "@apollo/client": "3.8.2",
+    "apollo-boost": "0.4.9",
+    "graphql": "16.8.0",
+    "graphql-tag": "2.12.6",
+    "apollo-link-ws": "1.0.20",
     "react": "^18",
     "react-dom": "^18",
     "next": "14.0.4",
@@ -31,6 +39,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/draft-js": "0.11.18",
     "eslint": "^8",
     "eslint-config-next": "14.0.4"
   }
