--- a/apps/imagine-next/package.json
+++ b/apps/imagine-next/package.json
@@ -27,6 +27,7 @@
     "@emotion/react": "11.11.3",
     "@emotion/styled": "11.11.0",
     "react-data-table-component": "7.5.4",
+    "polished": "4.3.1",
     "react-toastify": "9.1.3",
     "@imagine-cms/web": "*",
     "@imagine-cms/game-ui": "*",
